minor fixes to bucket and index names in sample search index and alias JSON (#271)
* Update search-index-alias.jsonc

Correct the bucket name and index name for the color vector index based on the sample data set name and the docs page with the JSON for the index definition.

* Update sample-vector-search-index-payload.json

Correct source Name to match bucket name for color-vector-sample dataset

--- a/modules/search/examples/search-index-alias.jsonc
+++ b/modules/search/examples/search-index-alias.jsonc
@@ -4,7 +4,7 @@
     "params": {
       "targets": {
         "travel-sample.inventory.travel-index": {},
-        "vector-sample.color.color-index": {}
+        "color-vector-sample.color.color-test": {}
       }
     },
     "sourceType": "nil",
