[DOC-12715] Document New Search Request Params for Search Fine-Tuning (#291)
* [quickfix]: quickfix: strange font problem on diagram (#274)

Seems to have been caused by extra space in the label.

* [DOC-12610]: Document `nprobe` tweaking

* [DOC=12610]: Moved fine-tuning menu entry.
[DOC=12610]: Moved the stem declaration; wasn't working in the old position.

* [DOC=12610]:
Moved and reworded the sections for clarity.
Adding link to search-index-params.adoc

* [DOC-12715] Add documentation to the JSON search request example and topics around the new added memory-efficient setting and the params object for probe and centroid tuning

* [DOC-12715] Adding on to Ray's documentation to provide a link to Search Request Params.

* [DOC-12715] Comments from peer review

---------

Co-authored-by: Ray Offiah <77050471+RayOffiah@users.noreply.github.com>
Co-authored-by: Ray Offiah <ray.offiah@couchbase.com>

--- a/modules/search/examples/run-search-full-request.jsonc
+++ b/modules/search/examples/run-search-full-request.jsonc
@@ -47,6 +47,10 @@
     "knn": [
         {
             "k": 10,
+            "params": {
+                "ivf_nprobe_pct": 1,
+                "ivf_max_codes_pct": 0.2
+            },
             "field": "vector_field",
             "vector": [ 0.707106781186548, 0, 0.707106781186548 ]
         }
