--- a/modules/search/examples/run-search-full-request.jsonc
+++ b/modules/search/examples/run-search-full-request.jsonc
@@ -9,7 +9,7 @@
                     "bool": false
                 },
                 {
-                    "field": "ratings.Cleanliness",
+                    "field": "reviews.ratings.Cleanliness",
                     "min": 1,
                     "max": 3,
                     "inclusive_min": true,
@@ -71,8 +71,9 @@
             // end::vectors[]
             "level": "at_plus",
             "results": "complete"
-        }
+        },
         // end::consistency[]
+        "validate": true
     },
     // end::ctl[]
     "size": 10,
@@ -147,9 +148,9 @@
                 "by": "field",
                 "field": "field2",
                 "desc": false,
-                "mode": "max",
+                "mode": "default",
                 "missing": "last",
-                "type": "number"
+                "type": "string"
             },
             "-_score",
             "-_id"
@@ -158,8 +159,8 @@
     // end::sort[]
     "includeLocations": false,
     "score": "none",
-    "search_after": ["field1Value", "5", "10.033205341869529", "1234"],
-    "search_before": ["field1Value", "5", "10.033205341869529", "1234"],
+    "search_after": ["field1String", "field2String", "10.033205341869529", "hotel_1234"],
+    "search_before": ["field1String", "field2String", "10.033205341869529", "hotel_1234"],
     "limit": 10,
     "offset": 0,
     "collections": ["collection1", "collection2"]
